# rustlint

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/linter/: mod.rs
src/processor/: mod.rs
src/rules/: line_length.rs  mod.rs  naming_conventions.rs  unused_imports.rs
tests/: test_linter.rs  test_processor.rs  test_rules.rs
tests/test_files/: line_length.py  naming_conventions.py  style_issues.py  syntax_errors.py  unused_code.py  unused_imports.py
