[package]
name = "rustlint"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Python linter written in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustpython-parser = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
rayon = "1.8"
colored = "2.0"
log = "0.4"
env_logger = "0.10"
walkdir = "2.4"
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
